# SO

./: .gitignore  CMakeLists.txt  macros.h
Lab1/: ldd.txt  main  main.c  nm.txt  strace.txt
Lab2/: hello  hello.c  mycopy  mycopy.c
Lab3/: TODO.txt  kcopy.c  kcopy_output.txt  khello.c  sys_generic.c  syscalls.master
Lab4/: collatz.c  collatz_child.h  forkls.c  ncollatz.c
Lab5/: shmcollatz.c
Lab6/: matmult.c  strrev.c  test_matmult.py
Lab7/: barrier.c  count.c
