cmake_minimum_required(VERSION 3.20)
project(SO LANGUAGES C)

add_executable(Lab1_main Lab1/main.c)

add_executable(Lab2_hello Lab2/hello.c)
add_executable(Lab2_mycopy Lab2/mycopy.c)

add_executable(Lab4_collatz Lab4/collatz.c)
add_executable(Lab4_forkls Lab4/forkls.c)
add_executable(Lab4_ncollatz Lab4/ncollatz.c)
